fix: overflow table
- add ' .table-responsive'  class to div containing table

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -156,4 +156,5 @@ main {
 }
 main.fullScreen {
   min-height: 100vh;
+  width:auto;
 }
